Fixes firefox layout bug
- specific fix for misplaced text on the submit page in firefox

--- a/cuckoo/web/src/scss/components/_dndupload.scss
+++ b/cuckoo/web/src/scss/components/_dndupload.scss
@@ -426,6 +426,7 @@
 
                 span {
                     position: absolute;
+                    left: 0;
                     width: 100%;
                     text-align: center;
                     bottom: 14px;
